@@ -1,8 +1,10 @@
 Version 1.5.3 (build @PLASTIMATCH_SVN_VERSION@)
 @TIMESTAMP@
 * Add support for signed char image type
-* Add output image type to slicer plugin
-* Add bspline regularization to slicer plugin
+* Add output image type to slicer bspline plugin
+* Add bspline regularization to slicer bspline plugin
+* Add ss_list (structure set name) file input/output to slicer dicomrt
+  import/export plugins
 * Fix/workaround problem with b-spline regularization on images with 
   negative voxel spacing
 * Fix bug where pixel values were wrapped instead of clamped when 
